==> OctavioPB1/LiDAR-Edge-Computing-Connection/Microcontroller/lib/Mapping/LiDAR_Library/vl53l0x.c <==
#include "vl53l0x.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "debug_helper.h"
#include "esp_timer.h"
#include "driver/gpio.h"
#include "freertos/queue.h"
#include <string.h>
#define REG_IDENTIFICATION_MODEL_ID (0xC0)
#define REG_VHV_CONFIG_PAD_SCL_SDA_EXTSUP_HV (0x89)
#define REG_MSRC_CONFIG_CONTROL (0x60)
#define REG_FINAL_RANGE_CONFIG_MIN_COUNT_RATE_RTN_LIMIT (0x44)
#define REG_SYSTEM_SEQUENCE_CONFIG (0x01)
#define REG_DYNAMIC_SPAD_REF_EN_START_OFFSET (0x4F)
#define REG_DYNAMIC_SPAD_NUM_REQUESTED_REF_SPAD (0x4E)
#define REG_GLOBAL_CONFIG_REF_EN_START_SELECT (0xB6)
#define REG_SYSTEM_INTERRUPT_CONFIG_GPIO (0x0A)
#define REG_GPIO_HV_MUX_ACTIVE_HIGH (0x84)
#define REG_SYSTEM_INTERRUPT_CLEAR (0x0B)
#define REG_RESULT_INTERRUPT_STATUS (0x13)
#define REG_SYSRANGE_START (0x00)
#define REG_GLOBAL_CONFIG_SPAD_ENABLES_REF_0 (0xB0)
#define REG_RESULT_RANGE_STATUS (0x14)
#define REG_SLAVE_DEVICE_ADDRESS (0x8A)
#define RANGE_SEQUENCE_STEP_TCC (0x10) /* Target CentreCheck */
#define RANGE_SEQUENCE_STEP_MSRC (0x04) /* Minimum Signal Rate Check */
#define RANGE_SEQUENCE_STEP_DSS (0x28) /* Dynamic SPAD selection */
#define RANGE_SEQUENCE_STEP_PRE_RANGE (0x40)
#define RANGE_SEQUENCE_STEP_FINAL_RANGE (0x80)
#define VL53L0X_EXPECTED_DEVICE_ID (0xEE)
#define VL53L0X_DEFAULT_ADDRESS (0x29)
#define SPAD_TYPE_APERTURE (0x01)
#define SPAD_START_SELECT (0xB4)
#define SPAD_MAX_COUNT (44)
#define SPAD_MAP_ROW_COUNT (6)
#define SPAD_ROW_SIZE (8)

static bool device_is_booted()
{
    uint8_t device_id = 0;
    if (!i2c_read_addr8_data8(REG_IDENTIFICATION_MODEL_ID, &device_id)) {
        ESP_LOGE(TAG, "Error reading the MODEL ID");
        LOG_MESSAGE_E(TAG,"Error reading the MODEL ID");
        return false;
    }
    DEBUGING_ESP_LOG(ESP_LOGI(TAG, "REG_IDENTIFICATION_MODEL_ID read: %x", device_id));
    return device_id == VL53L0X_EXPECTED_DEVICE_ID;
}

static bool init_address(vl53l0x_idx_t idx)
{
    set_hardware_standby(idx, false);
    //i2c_set_slave_address(VL53L0X_DEFAULT_ADDRESS);

    /* The datasheet doesn't say how long we must wait to leave hw standby,
     * but using the same delay as vl6180x seems to work fine. */
    //__delay_cycles(400);
    vTaskDelay(800/portTICK_PERIOD_MS);

    if (!device_is_booted()) {
        ESP_LOGE(TAG, "El dispisitivo NO está conectado");
        LOG_MESSAGE_E(TAG,"El dispisitivo NO está conectado");
        return false;
    }

    if (!configure_address(vl53l0x_infos[idx].addr)) {
        ESP_LOGE(TAG, "No se ha podido asignar la dirección correctamente: %d", vl53l0x_infos[idx].addr);
        LOG_MESSAGE_E(TAG,"No se ha podido asignar la dirección correctamente");
        return false;
    }
    return true;
}
